Add info and update user display

--- a/Frontend-Chat/index.html
+++ b/Frontend-Chat/index.html
@@ -174,7 +174,7 @@
                             </div>
                         </div>
 
-                        <div class="row menu-sideBar-body">
+                        <div class="row menu-sideBar-body" id="menu-info"> 
                             <div class="col-sm-3 col-xs-3 menu-sideBar-icon">
                                 <i class="fa fa-user fa-1x" aria-hidden="true"></i>
                             </div>
@@ -187,7 +187,7 @@
                             </div>
                         </div>
 
-                        <div class="row menu-sideBar-body">
+                        <div class="row menu-sideBar-body" id="menu-update">
                             <div class="col-sm-3 col-xs-3 menu-sideBar-icon">
                                 <i class="fa fa-pencil-square-o fa-1x" aria-hidden="true"></i>
                             </div>
@@ -195,6 +195,19 @@
                                 <div class="col-sm-8 col-xs-8 menu-sideBar-name">
                                     <span class="menu-name">
                                         <a>Cập nhật thông tin</a>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row menu-sideBar-body" id="menu-change-password">
+                            <div class="col-sm-3 col-xs-3 menu-sideBar-icon">
+                                <i class="fa fa-pencil-square-o fa-1x" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-sm-9 col-xs-9 menu-sideBar-main">
+                                <div class="col-sm-8 col-xs-8 menu-sideBar-name">
+                                    <span class="menu-name">
+                                        <a>Đổi mật khẩu</a>
                                     </span>
                                 </div>
                             </div>
