Add change password and update some places

--- a/Frontend-Chat/pages/update.html
+++ b/Frontend-Chat/pages/update.html
@@ -6,7 +6,11 @@
     <title>Update</title>
     <link rel="stylesheet" href="../css/update.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css">
+    <link rel="stylesheet" href="http://spin.js.org/spin.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 </head>
 
 <body>
@@ -15,7 +19,7 @@
         <h2>Cập nhật thông tin</h2>
 
         <div id="image-overlay">
-            <img src="../assets/image/avatar.jpg" alt="Avatar" id="old-avatar">
+            <img src="" alt="Avatar" id="old-avatar">
         </div>
 
         <div id="full-image-overlay">
@@ -48,8 +52,7 @@
         </div>
 
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
     <script src="../js/update.js"></script>
 </body>
 
