Fix and add some notification effect animation

--- a/Frontend-Chat/pages/login.html
+++ b/Frontend-Chat/pages/login.html
@@ -23,6 +23,11 @@
 
             <label id="error-message"></label>
 
+            <div class="forgot-pass">
+                <a href="../pages/forgotpassword.html">Forgot password?</a>
+            </div>
+            
+
             <input type="submit" name="btnlogin" value="Login">
 
             <div class="register">
