Add send code to email to verify forgot password feat

--- a/Frontend-Chat/index.html
+++ b/Frontend-Chat/index.html
@@ -55,7 +55,7 @@
                     <div class="row searchBox">
                         <div class="col-sm-12 searchBox-inner">
                             <input id="searchText" type="text" class="form-control" name="searchText"
-                                placeholder="Tìm kiếm bạn bè">
+                                placeholder="Tìm kiếm cuộc trò chuyện">
                             <!-- <i class="fa fa-search fa-2x ml-2"></i> -->
                             <button type="button" class="search-button">
                                 <i class="fa fa-search fa-1x" aria-hidden="true"></i>
