Update send file attachment separately

--- a/Frontend-Chat/index.html
+++ b/Frontend-Chat/index.html
@@ -265,6 +265,9 @@
 
                 <!-- Body Message-->
                 <div class="row message" id="conversation">
+                    <!-- <div id="sendingNotification" class="sending-notification">
+                        <i class="fa fa-spinner fa-spin"></i> Đang gửi tin nhắn... 
+                    </div>  -->
                     <!-- <div class="row message-previous">
                         <div class="col-sm-12 previous">
                             <a onclick="previous(this)" id="ankitjain28" name="20">
